Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -3495,9 +3495,9 @@ h4.css__title{
 }
 
 .large-frame{
-    width: calc(100% - 10px);
-    marging: 0 auto !important;
-    padding: 5px;
+    width: calc(100% - 20px);
+    margin: 0 auto !important;
+    padding: 0;
 }
 
 .sidebar a.css__title {
